Finish the CSS styling

--- a/index.html
+++ b/index.html
@@ -34,53 +34,64 @@
         </section>
 
         <section id="work">
-            <div class="main-content">
+            <div class="title-wrapper">
                 <h1 class="main-content-html-title">A taste of my work using HTML/CSS</h1>
-                <div class="work-wrapper">
-                    <figure class="form img-container">
-                        <img class="project-img" src="project-images/form-img.png" alt="form">
-                        <figcaption class="img-caption">
-                            <a href="form/survey-form.html" target="_blank">Form project</a>
-                        </figcaption>
-                    </figure>
-                    <figure class="landing-page img-container">
-                        <img class="project-img" src="project-images/landing-page-img.png" alt="form">
-                        <figcaption class="img-caption">
-                            <a href="landing-page/landing-page.html" target="_blank">Simple Landing Page project</a>
-                        </figcaption>
-                    </figure>
-                    <figure class="technical-doc img-container">
-                        <img class="project-img" src="project-images/technical-documentation-img.png" alt="form">
-                        <figcaption class="img-caption">
-                            <a href="technical-documentation/technical-documentation-page.html" target="_blank">
-                                Technical Documentation project
-                            </a>
-                        </figcaption>
-                    </figure>
-                    <figure class="tribute-page img-container">
-                        <img class="project-img" src="project-images/tribute-page-img.png" alt="form">
-                        <figcaption class="img-caption">
-                            <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page project</a>
-                        </figcaption>
-                    </figure>
-                </div>
-                <h1 class="main-content-js-title">Now some work using JavaScript</h1>
             </div>
+            <div class="work-wrapper">
+                <figure class="form img-container">
+                    <img class="project-img" src="project-images/form-img.png" alt="form">
+                    <figcaption class="img-caption">
+                        <a href="form/survey-form.html" target="_blank">Form project</a>
+                    </figcaption>
+                </figure>
+                <figure class="landing-page img-container">
+                    <img class="project-img" src="project-images/landing-page-img.png" alt="form">
+                    <figcaption class="img-caption">
+                        <a href="landing-page/landing-page.html" target="_blank">Simple Landing Page project</a>
+                    </figcaption>
+                </figure>
+                <figure class="technical-doc img-container">
+                    <img class="project-img" src="project-images/technical-documentation-img.png" alt="form">
+                    <figcaption class="img-caption">
+                        <a href="technical-documentation/technical-documentation-page.html" target="_blank">
+                            Technical Documentation project
+                        </a>
+                    </figcaption>
+                </figure>
+                <figure class="tribute-page img-container">
+                    <img class="project-img" src="project-images/tribute-page-img.png" alt="form">
+                    <figcaption class="img-caption">
+                        <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page project</a>
+                    </figcaption>
+                </figure>
+            </div>
+            <h1 class="main-content-js-title">Now some work using JavaScript</h1>
+
         </section>
 
         <section id="contact">
+            <div class="quote-div">
+                <figure class="tolkien">
+                    <blockquote>
+                        <p class="quote">“All we have to decide is what to do with the time that is given
+                            us.”</p>
+                    </blockquote>
+                    <figcaption class="author">—J.R.R. Tolkien, <cite>The Fellowship of the Ring</cite></figcaption>
+                </figure>
+                <p class="invite">Shall we go on an adventure?</p>
+            </div>
             <div class="contact-info">
-                <ul>
-                    <li><a href="https://www.facebook.com/">
+                <ul class="contacts-list">
+                    <li><a href="https://www.facebook.com/" target="_blank">
                             <i class="fa-brands fa-facebook"></i>
                             Facebook</a></li>
-                    <li><a href="https://www.linkedin.com/">
+                    <li><a href="https://www.linkedin.com/" target="_blank">
                             <i class="fa-brands fa-linkedin"></i>
                             LinkedIn</a></li>
-                    <li><a href="https://github.com/">
+                    <li><a href="https://github.com/" target="_blank">
                             <i class="fa-brands fa-github"></i>
                             GitHub</a></li>
-                    <li><a href="https://www.instagram.com/">
+                    <li><a href="https://www.instagram.com/" target="_blank">
                             <i class="fa-brands fa-square-instagram"></i>
                             Instagram</a></li>
                 </ul>
