Add media queries

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <nav class="nav-bar">
         <ul class="nav-ul">
-            <li class="nav-li"><a href="#about">About</a></li>
-            <li class="nav-li"><a href="#work">Work</a></li>
-            <li class="nav-li"><a href="#contact">Contact</a></li>
+            <li class="nav-li"><a class="section-link" href="#about">About</a></li>
+            <li class="nav-li"><a class="section-link" href="#work">Work</a></li>
+            <li class="nav-li"><a class="section-link" href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -34,10 +34,10 @@
         </section>
 
         <section id="work">
-            <div class="title-wrapper">
-                <h1 class="main-content-html-title">A taste of my work using HTML/CSS</h1>
-            </div>
             <div class="work-wrapper">
+                <div class="title-wrapper-html">
+                    <h1 class="main-content-html-title">A taste of my work using HTML/CSS</h1>
+                </div>
                 <figure class="form img-container">
                     <img class="project-img" src="project-images/form-img.png" alt="form">
                     <figcaption class="img-caption">
@@ -64,8 +64,11 @@
                         <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page project</a>
                     </figcaption>
                 </figure>
+                <div class="title-wrapper-js">
+                    <h1 class="main-content-js-title">Now some work using JavaScript</h1>
+                </div>
             </div>
-            <h1 class="main-content-js-title">Now some work using JavaScript</h1>
+
 
         </section>
 
