Finish the CSS of the introduciotn page

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
             </div>
             <div class="contact-info">
                 <ul class="contacts-list">
-                    <li><a href="https://www.facebook.com/" target="_blank">
+                    <li><a href="https://www.facebook.com/mateus.britto.758" target="_blank">
                             <i class="fa-brands fa-facebook"></i>
                             Facebook</a></li>
-                    <li><a href="https://www.linkedin.com/" target="_blank">
+                    <li><a href="https://www.linkedin.com/in/mateus-britto-03846bb5/" target="_blank">
                             <i class="fa-brands fa-linkedin"></i>
                             LinkedIn</a></li>
-                    <li><a href="https://github.com/" target="_blank">
+                    <li><a href="https://github.com/mateus-britto" target="_blank">
                             <i class="fa-brands fa-github"></i>
                             GitHub</a></li>
-                    <li><a href="https://www.instagram.com/" target="_blank">
+                    <li><a href="https://www.instagram.com/mateus.britto/" target="_blank">
                             <i class="fa-brands fa-square-instagram"></i>
                             Instagram</a></li>
                 </ul>
