--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,800;1,100;1,200;1,300;1,800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="landing-page.css">
     <title>Landing Page</title>
 </head>
@@ -74,24 +79,36 @@
 
             <section id="pricing">
                 <div class="prices">
-                    <h1>Booster Packs</h1>
-                    <h2>$1.99</h2>
-                    <ul class="booster">
-                        <li>Legendary Duelists: Ancient Millennium</li>
-                        <li>Legendary Duelists: White Dragon Abyss</li>
-                        <li>Legendary Duelists: Magical Hero</li>
-                    </ul>
-                    <input id="submit" type="submit" value="SELECT" class="button"></input>
+                    <h1 class="item-name">Booster Packs</h1>
+                    <div class="value">
+                        <h2>$1.99</h2>
+                    </div>
+                    <div class="names">
+                        <ul class="booster names-list">
+                            <li>Legendary Duelists: Ancient Millennium</li>
+                            <li>Legendary Duelists: White Dragon Abyss</li>
+                            <li>Legendary Duelists: Magical Hero</li>
+                        </ul>
+                    </div>
+                    <div class="select-btn-div">
+                        <input id="submit" type="submit" value="SELECT" class="button"></input>
+                    </div>
                 </div>
                 <div class="prices">
-                    <h1>Starter Decks</h1>
-                    <h2>$9.99</h2>
-                    <ul class="decks">
-                        <li>Egyptian God Deck: Slifer The Sky Dragon</li>
-                        <li>Egyptian God Deck: Obelisk The Tormentor</li>
-                        <li>Egyptian God Deck: Winged Dragon of Ra</li>
-                    </ul>
-                    <input id="submit" type="submit" value="SELECT" class="button"></input>
+                    <h1 class="item-name">Starter Decks</h1>
+                    <div class="value">
+                        <h2>$9.99</h2>
+                    </div>
+                    <div class="names">
+                        <ul class="decks names-list">
+                            <li>Egyptian God Deck: Slifer The Sky Dragon</li>
+                            <li>Egyptian God Deck: Obelisk The Tormentor</li>
+                            <li>Egyptian God Deck: Winged Dragon of Ra</li>
+                        </ul>
+                    </div>
+                    <div class="select-btn-div">
+                        <input id="submit" type="submit" value="SELECT" class="button"></input>
+                    </div>
                 </div>
             </section>
         </main>
