Correct a misspelling in the tribute page

--- a/tribute-page/tribute-page.html
+++ b/tribute-page/tribute-page.html
@@ -23,7 +23,7 @@
             <figcaption id="img-caption">Professor Tolkien, in his library smoking his signature pipe</figcaption>
         </div>
         <div id="time-line">
-            <h1 id="tribute-info">Here is a time line of Professor Tolkien's life:</h1>
+            <h1 id="tribute-info">Here is a brief timeline of Professor Tolkien's life:</h1>
             <ul id="dates">
                 <li><strong>3 January 1892</strong> - Birth of John Ronald Reuel Tolkien in Bloemfontein, Orange Free
                     State
