Start re-styling the technical documentation page

--- a/technical-documentation/technical-documentation-page.html
+++ b/technical-documentation/technical-documentation-page.html
@@ -5,46 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="technical-documentation-page.css">
     <title>Mass Effect Codex</title>
 </head>
 
 <body>
     <div id="page-wrapper">
-        <div id="nav-container">
-            <nav id="navbar">
-                <h1>Mass Effect Codex</h1>
-                <ul>
-                    <li>
-                        <a class="nav-link" href="#intro">Introduction</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#coucil-races">Aliens: Council Races</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#non-council-races">Aliens: Non-Council Races</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#government">Citadel and Galactic Government</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#alliance">Humanity and the Systems Alliance</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#organizations">Organizations</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#technology">Technology</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#reapers">The Reapers</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#reference">Reference</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav id="nav-bar">
+            <h1 class="title">Mass Effect Codex</h1>
+            <ul class="nav-list">
+                <li>
+                    <a class="nav-link" href="#intro">Introduction</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#coucil-races">Aliens: Council Races</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#non-council-races">Aliens: Non-Council Races</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#government">Citadel and Galactic Government</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#alliance">Humanity and the Systems Alliance</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#organizations">Organizations</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#technology">Technology</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#reapers">The Reapers</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#reference">Reference</a>
+                </li>
+            </ul>
+        </nav>
         <div id="main-container">
             <section class="main" id="intro">
                 <h1>Introduction</h1>
