Make minor changes
- Change the format of the miniatures from the intro page from JPEG to Webp

- Alter som styling in the landing page

--- a/index.html
+++ b/index.html
@@ -36,37 +36,34 @@
         <section id="work">
             <div class="work-wrapper">
                 <div class="title-wrapper-html">
-                    <h1 class="main-content-html-title">A taste of my work using HTML/CSS</h1>
+                    <h1 class="main-content-html-title">A taste of my work...</h1>
                 </div>
                 <figure class="form img-container">
-                    <img class="project-img" src="project-images/form-img.png" alt="form">
+                    <img class="project-img" src="project-images/form-img.webp" alt="form">
                     <figcaption class="img-caption">
-                        <a href="form/survey-form.html" target="_blank">Form project</a>
+                        <a href="form/survey-form.html" target="_blank">Simple form</a>
                     </figcaption>
                 </figure>
                 <figure class="landing-page img-container">
-                    <img class="project-img" src="project-images/landing-page-img.png" alt="form">
+                    <img class="project-img" src="project-images/landing-page-img.webp" alt="form">
                     <figcaption class="img-caption">
-                        <a href="landing-page/landing-page.html" target="_blank">Simple Landing Page project</a>
+                        <a href="landing-page/landing-page.html" target="_blank">Landing Page</a>
                     </figcaption>
                 </figure>
                 <figure class="technical-doc img-container">
-                    <img class="project-img" src="project-images/technical-documentation-img.png" alt="form">
+                    <img class="project-img" src="project-images/tribute-page-img.webp" alt="form">
                     <figcaption class="img-caption">
                         <a href="technical-documentation/technical-documentation-page.html" target="_blank">
-                            Technical Documentation project
+                            Technical Documentation
                         </a>
                     </figcaption>
                 </figure>
                 <figure class="tribute-page img-container">
-                    <img class="project-img" src="project-images/tribute-page-img.png" alt="form">
+                    <img class="project-img" src="project-images/tribute-page-img.webp" alt="form">
                     <figcaption class="img-caption">
-                        <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page project</a>
+                        <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page</a>
                     </figcaption>
                 </figure>
-                <div class="title-wrapper-js">
-                    <h1 class="main-content-js-title">Now some work using JavaScript</h1>
-                </div>
             </div>
 
 
