--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -21,7 +21,7 @@
             <img src="Yu-Gi-Oh_Logo.png" alt="logo" class="img-logo">
             <nav id="nav-bar">
                 <ul class="nav-ul">
-                    <li class="nav-li"><a class="nav-a" href="#features">Features</a></li>
+                    <li class="nav-li"><a class="nav-a" href="#subscription">Features</a></li>
                     <li class="nav-li"><a class="nav-a" href="#tutorial">Tutorial</a></li>
                     <li class="nav-li"><a class="nav-a" href="#pricing">Pricing</a></li>
                 </ul>
