Finish the technical documentation page
- Finish the styling of the page

- Add the back to the top button with JS

--- a/technical-documentation/technical-documentation-page.html
+++ b/technical-documentation/technical-documentation-page.html
@@ -11,12 +11,13 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="technical-documentation-page.css">
+    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous"></script>
     <title>Mass Effect Codex</title>
 </head>
 
 <body>
     <div id="page-wrapper">
-        <nav id="nav-bar">
+        <div id="nav-panel">
             <h1 class="title">Mass Effect Codex</h1>
             <ul class="nav-list">
                 <li>
@@ -47,7 +48,7 @@
                     <a class="nav-link" href="#reference">Reference</a>
                 </li>
             </ul>
-        </nav>
+        </div>
         <div id="main-container">
             <section class="main" id="intro">
                 <h1>Introduction</h1>
@@ -371,7 +372,8 @@
             </section>
         </div>
     </div>
-
+    <button class="backToTopBtn"><i class="fa-solid fa-arrow-up-from-bracket"></i></button>
+    <script src="app.js"></script>
 </body>
 
 </html>
