Alter the styling of the main page and more
- Alter the image of the technical documentation page

- Add some padding in the final quote

--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
                     </figcaption>
                 </figure>
                 <figure class="landing-page img-container">
-                    <img class="project-img" src="project-images/landing-page-img.webp" alt="form">
+                    <img class="project-img" src="project-images/landing-page-img.webp" alt="landing-page">
                     <figcaption class="img-caption">
                         <a href="landing-page/landing-page.html" target="_blank">Landing Page</a>
                     </figcaption>
                 </figure>
                 <figure class="technical-doc img-container">
-                    <img class="project-img" src="project-images/tribute-page-img.webp" alt="form">
+                    <img class="project-img" src="project-images/technical-documentation.webp"
+                        alt="technical-documentation">
                     <figcaption class="img-caption">
                         <a href="technical-documentation/technical-documentation-page.html" target="_blank">
                             Technical Documentation
@@ -59,7 +60,7 @@
                     </figcaption>
                 </figure>
                 <figure class="tribute-page img-container">
-                    <img class="project-img" src="project-images/tribute-page-img.webp" alt="form">
+                    <img class="project-img" src="project-images/tribute-page-img.webp" alt="tribute-page">
                     <figcaption class="img-caption">
                         <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page</a>
                     </figcaption>
