--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Unlock the digital potential of your business or non profit with my web development expertise. Allow me to take your online presence to another level.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous"></script>
@@ -11,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,800;1,100;1,200;1,300;1,800&family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Introduction</title>
+    <title>Mateus Britto - Web Development</title>
 </head>
 
 <body>
