Alter font links and change script tags from the head to the end of the body tag

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
         content="Unlock the digital potential of your business or non profit with my web development expertise. Allow me to take your online presence to another level.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,800;1,100;1,200;1,300;1,800&family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Mateus Britto - Web Development</title>
 </head>
@@ -103,6 +100,7 @@
 
     </div>
     <script src="app.js"></script>
+    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous" defer></script>
 </body>
 
 </html>
