--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <figure class="landing-page img-container">
                     <img class="project-img" src="project-images/landing-page-img.webp" alt="landing-page">
                     <figcaption class="img-caption">
-                        <a href="landing-page/landing-page.html" target="_blank">Landing Page</a>
+                        <a href="landing-page/landing-page.html" target="_blank" rel="noopener noreferrer">Landing
+                            Page</a>
                     </figcaption>
                 </figure>
                 <figure class="technical-doc img-container">
