Add the following
- Make minor changes on index.html

- Use Autoprefixer on styles.css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
     <nav class="nav-bar">
         <ul class="nav-ul">
-            <li class="nav-li"><a class="section-link" href="#about">About</a></li>
-            <li class="nav-li"><a class="section-link" href="#work">Work</a></li>
-            <li class="nav-li"><a class="section-link" href="#contact">Contact</a></li>
+            <li class="nav-li"><a class="section-link" href="#about" aria-label="Learn more about me">About</a></li>
+            <li class="nav-li"><a class="section-link" href="#work" aria-label="Learn more about my work">Work</a></li>
+            <li class="nav-li"><a class="section-link" href="#contact"
+                    aria-label="Learn more about how to contact me">Contact</a></li>
         </ul>
     </nav>
 
@@ -82,16 +83,20 @@
             </div>
             <div class="contact-info">
                 <ul class="contacts-list">
-                    <li><a href="https://www.facebook.com/mateus.britto.758" target="_blank">
+                    <li><a href="https://www.facebook.com/mateus.britto.758" target="_blank" rel="noopener noreferrer"
+                            aria-label="Visit my Facebook profile">
                             <i class="fa-brands fa-facebook"></i>
                             Facebook</a></li>
-                    <li><a href="https://www.linkedin.com/in/mateus-britto-03846bb5/" target="_blank">
+                    <li><a href="https://www.linkedin.com/in/mateus-britto-03846bb5/" target="_blank"
+                            rel="noopener noreferrer" aria-label="Visit my LinkedIn profile">
                             <i class="fa-brands fa-linkedin"></i>
                             LinkedIn</a></li>
-                    <li><a href="https://github.com/mateus-britto" target="_blank">
+                    <li><a href="https://github.com/mateus-britto" target="_blank" rel="noopener noreferrer"
+                            aria-label="Visit my GitHub profile">
                             <i class="fa-brands fa-github"></i>
                             GitHub</a></li>
-                    <li><a href="https://www.instagram.com/mateus.britto/" target="_blank">
+                    <li><a href="https://www.instagram.com/mateus.britto/" target="_blank" rel="noopener noreferrer"
+                            aria-label="Visit my Instagram profile">
                             <i class="fa-brands fa-square-instagram"></i>
                             Instagram</a></li>
                 </ul>
