Alter image sizes for better perfmance and add defer on the JS script

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
 
     </div>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous" defer></script>
 </body>
 
