Add new projects to the main page
- Add calculator, etch-a-sketch and quote generator projects

- Make adjustments to media queries

--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
                         <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page</a>
                     </figcaption>
                 </figure>
+                <figure class="calculator img-container">
+                    <img class="project-img" src="project-images/calculator.webp" alt="calculator">
+                    <figcaption class="img-caption">
+                        <a href="calculator/index.html" target="_blank">Calculator</a>
+                    </figcaption>
+                </figure>
+                <figure class="quote-generator img-container">
+                    <img class="project-img" src="project-images/quote-generator.webp" alt="quote-generator">
+                    <figcaption class="img-caption">
+                        <a href="quote-generator/index.html" target="_blank">Quote Generator</a>
+                    </figcaption>
+                </figure>
+                <figure class="etch-a-sketch img-container">
+                    <img class="project-img" src="project-images/etch-a-sketch.webp" alt="etch-a-sketch">
+                    <figcaption class="img-caption">
+                        <a href="etch-a-sketch/index.html" target="_blank">Etch-a-Sketch</a>
+                    </figcaption>
+                </figure>
             </div>
 
         </section>
