Add several changes
-  Add media quaries for the calculator project

- Alter some of the CSS/HTML, add media quaries and mobile event listeners to the etch-a-sletch project

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -16,13 +16,13 @@
     </div>
     <div class="board"></div>
     <div class="btn-container">
-        <button class="black-btn">Black</button>
-        <button class="random-btn">Random
+        <button class="black-btn btn">Black</button>
+        <button class="random-btn btn">Random
             <span class="letter-1">C</span><span class="letter-2">o</span><span class="letter-3">l</span><span
                 class="letter-4">o</span><span class="letter-5">r</span>
         </button>
-        <button class="clear-btn">Clear Board</button>
-        <button class="reset-btn">Reset Board</button>
+        <button class="clear-btn btn">Clear Board</button>
+        <button class="reset-btn btn">Reset Board</button>
     </div>
     <script src="app.js"></script>
 </body>
