Change the animation style fo the main page items

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
 
         <section id="about">
-            <div class="fade-in-text intro">
+            <div class="fade-in-text intro hidden">
                 <span class="introduction-name">Mateus Britto</span>
                 <span class="introduction-title">Web Developer</span>
             </div>
@@ -36,22 +36,22 @@
         <section id="work">
             <div class="work-wrapper">
                 <div class="title-wrapper-html">
-                    <h1 class="main-content-html-title">A taste of my work...</h1>
+                    <h1 class="main-content-html-title hidden">A taste of my work...</h1>
                 </div>
-                <figure class="form img-container">
+                <figure class="form img-container hidden">
                     <img class="project-img" src="project-images/form-img.webp" alt="form">
                     <figcaption class="img-caption">
                         <a href="form/survey-form.html" target="_blank">Simple form</a>
                     </figcaption>
                 </figure>
-                <figure class="landing-page img-container">
+                <figure class="landing-page img-container hidden">
                     <img class="project-img" src="project-images/landing-page-img.webp" alt="landing-page">
                     <figcaption class="img-caption">
                         <a href="landing-page/landing-page.html" target="_blank" rel="noopener noreferrer">Landing
                             Page</a>
                     </figcaption>
                 </figure>
-                <figure class="technical-doc img-container">
+                <figure class="technical-doc img-container hidden">
                     <img class="project-img" src="project-images/technical-documentation.webp"
                         alt="technical-documentation">
                     <figcaption class="img-caption">
@@ -60,25 +60,25 @@
                         </a>
                     </figcaption>
                 </figure>
-                <figure class="tribute-page img-container">
+                <figure class="tribute-page img-container hidden">
                     <img class="project-img" src="project-images/tribute-page-img.webp" alt="tribute-page">
                     <figcaption class="img-caption">
                         <a href="tribute-page/tribute-page.html" target="_blank">Tribute Page</a>
                     </figcaption>
                 </figure>
-                <figure class="calculator img-container">
+                <figure class="calculator img-container hidden">
                     <img class="project-img" src="project-images/calculator.webp" alt="calculator">
                     <figcaption class="img-caption">
                         <a href="calculator/index.html" target="_blank">Calculator</a>
                     </figcaption>
                 </figure>
-                <figure class="quote-generator img-container">
+                <figure class="quote-generator img-container hidden">
                     <img class="project-img" src="project-images/quote-generator.webp" alt="quote-generator">
                     <figcaption class="img-caption">
                         <a href="quote-generator/index.html" target="_blank">Quote Generator</a>
                     </figcaption>
                 </figure>
-                <figure class="etch-a-sketch img-container">
+                <figure class="etch-a-sketch img-container hidden">
                     <img class="project-img" src="project-images/etch-a-sketch.webp" alt="etch-a-sketch">
                     <figcaption class="img-caption">
                         <a href="etch-a-sketch/index.html" target="_blank">Etch-a-Sketch</a>
@@ -122,8 +122,8 @@
         </section>
 
     </div>
-    <script src="app.js" defer></script>
-    <script src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous" defer></script>
+    <script defer src="app.js"></script>
+    <script defer src="https://kit.fontawesome.com/b4f03823c8.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
