Finish tic-tac-toe project
-Added reset score button

-Added media queries for responsiveness

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <h1 class="game-title">TIC TAC TOE</h1>
     <div class="board">
         <div class="square"></div>
@@ -26,6 +27,19 @@
         <h1 class="message"></h1>
         <button class="restart">Restart</button>
     </div>
+
+    <div class="score-container">
+        <div class="score">
+            <h2>Player:</h2>
+            <h2 class="player-score">0</h2>
+        </div>
+        <div class="score">
+            <h2>Computer:</h2>
+            <h2 class="cpu-score">0</h2>
+        </div>
+    </div>
+
+    <button class="score-reset">Reset Score</button>
 
     <script refer src="app.js"></script>
 </body>
